# hades_efficiency

./: .gitignore  CMakeLists.txt  README.md
batch/: batch_run.sh  run.sh
src/: acceptance.cc  calculate_occupancy.cc  centrality.h  cut_equal_bins.cc  efficiency.cc  fit_layers.cc  fit_occupancy.cc  hades_cuts.h  main.cc  momentum_reconstruction_eff.cc  momentum_reconstruction_eff.h  reco_acceptance.cc  reco_acceptance.h  sim_acceptance.cc  sim_acceptance.h  theta_p.cc
